sample-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
spec:
  rules:
  - host: sample-app.com
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: sample-app-internal-service
            port:
              number: 8080
